# s3cs

./: .travis.yml  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
src/: cli.rs  constants.rs  handlers.rs  main.rs
src/handlers/: admin.rs  mod.rs  s3.rs
tests/: admin.rs  basic_operation.rs
tests/common/: mod.rs
