[package]
name = "s3cs"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = []
readme = "README.md"
description = "An agent to help S3 Cache Share"


[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
rocksdb = "0.14"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
s3handler = "0.6"
executable-path = "1.0"
subprocess = "0.2"
